[package]
name = "dovetail_derive"
version = "0.1.0"
authors = ["torresashjian <migueltorreslopez@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
dovetail_core = { git = "http://github.com/torresashjian/x", branch = "issue-1/first-app" }
app = { git = "http://github.com/torresashjian/x", branch = "issue-1/first-app" }
flow = { git = "http://github.com/torresashjian/x", branch = "issue-1/first-app" }
syn = "0.15"
quote = "0.6.3"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
proc-macro2 = "0.4.27"
darling_core="0.9.0"
petgraph = "0.4.13"