[package]
name = "dovetail_trigger_macro_derive"
version = "0.1.0"
authors = ["torresashjian <migueltorreslopez@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6.3"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
proc-macro2 = "0.4.27"
app = { path = "../core_gen/app" }
trigger = { path = "../core_gen/trigger" }
