
[package]
name = "my_simple_activity_return"
version = "0.0.1"
authors = ["user <myemail@email.com>"]
edition = "2018"

[dependencies]
dovetail_derive = { path = "../dovetail_derive" }
#serde_json = "1.0"
#serde_derive = "1.0"
#serde = "1.0"
#ethcontract = { git = "https://github.com/torresashjian/dovetail-contrib", branch = "ethereum" }