[package]
name = "my_simple_sawtooth_app"
version = "0.1.0"
authors = ["Miguel Torres <migueltorreslopez@gmail.com>"]

[lib]
name = "my_simple_sawtooth_app"
path = "src/lib.rs"

[[bin]]
name = "my_simple_sawtooth_app"
path = "src/main.rs"

[dependencies]
#dovetail_derive = { path = "../dovetail_derive" }
#my_simple_sawtooth_trigger = { git = "https://github.com/torresashjian/dovetail-contrib", branch = "issue-41/sawtooth-contrib" }
#my_simple_trigger = { path = "../my_simple_trigger" }
my_simple_flow = { path = "../my_simple_flow" }

